<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Garage à Trois</string>
    <string name="server_URL">airlim.com</string>
    <string name="script_path">home</string>
    <string name="script_name">GarageaTrois-Server.php</string>
    <string name="userresult">grande</string>
    <string name="adminresult">taco</string>
    <string name="sleepytime">114</string>
    <string name="action_log">Access Log</string>
    <string name="action_devices">Device List</string>
    <string name="action_users">User List</string>
    <string name="log_in">Log in</string>
    <string name="pin_entry">Log in by entering your PIN</string>
    <string name="placeholder">Choose an action to perform</string>
    <string name="hello_world">hi</string>
    <string name="loading">Loading&#8230;</string>
    <string name="launch_codes">Select an item to administer.</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="enter_comment">Comment</string>
    <string name="edit_text">Name</string>
    <string name="cancel">Cancel</string>
    <string name="nfc">NFC Only?</string>
    <string name="administer">Go</string>
    <string name="admin_log">Garage à Trois - Access Log</string>
    <string name="admin_devices">Garage à Trois - Device List</string>
    <string name="admin_users">Garage à Trois - User List</string>
    <string name="wait_for_server">Waiting for server&#8230;</string>
    <string name="pref_title_debug">Debug</string>
    <string name="action_settings">Settings</string>
    <string name="pref_description_disablesettings">Disable access to this menu, this can be reverted by clearing app data.</string>
</resources>
