<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.airlim.garagetrois.MainActivity" >
    
    <item android:id="@+id/action_log"
        android:title="@string/action_log"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    <item android:id="@+id/action_users"
        android:title="@string/action_users"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    <item android:id="@+id/action_devices"
        android:title="@string/action_devices"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
</menu>
