<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ExpandableListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ExpandableListView>
        <View
            android:layout_width="1dp"
            android:layout_height="2dp">
        </View>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/actionView"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView"

            android:textSize="20sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/launch_codes"
            android:gravity="center"

            android:textAlignment="center"
            android:textIsSelectable="false" />
        <EditText
            android:id="@+id/editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text"
            android:visibility="invisible"
            android:imeActionLabel="@string/launch_codes" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="59dp"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ToggleButton
                    android:id="@+id/button2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textOn="Grant"
                    android:textOff="Revoke"
                    android:minWidth="106dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp"
                    android:id="@+id/toggleTextView"
                    android:enabled="false"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="20dp">
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Revoke"
            android:textOff="Grant"
            android:visibility="visible"
            android:text="@string/nfc"
            android:layout_gravity="center"
            android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center|left"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text=""
                    android:id="@+id/checkTextView"
                    android:enabled="false"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:text="@string/administer"/>
    </LinearLayout>

</LinearLayout>